--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="J.R Ibanez Romany">
+    <meta name="description" content="A web applications to book mark all of your favorite websites.">
     <title>
         Book Marker | BlindPenguinCode
     </title>
